add urob for easier hrm

--- a/config/west.yml
+++ b/config/west.yml
@@ -5,9 +5,13 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: gpeye                         #new entry
       url-base: https://github.com/GPeye  #new entry
+    # Additional modules containing boards/shields/custom code can be listed here as well
+    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: urob
+      url-base: https://github.com/urob
   projects:
     - name: zmk
-      remote: zmkfirmware
+      remote: urob
       revision: main
       import: app/west.yml
     - name: urchin-peripheral-animation   #new entry
