--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -21,3 +21,8 @@ CONFIG_ZMK_STUDIO=y
 # By default toggling the underglow on and off also toggles external power
 # on and off. This also causes the display to turn off.
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+
+# Bluetooth config
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_BT_CTLR_PHY_2M=n
