--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -24,5 +24,5 @@ CONFIG_ZMK_STUDIO=y
 
 # Bluetooth config
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-#CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_BT_CTLR_PHY_2M=n
