--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -25,3 +25,6 @@ CONFIG_ZMK_STUDIO=y
 # Bluetooth config
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_BT_CTLR_PHY_2M=n
+
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
