--- a/config/west.yml
+++ b/config/west.yml
@@ -20,5 +20,8 @@ manifest:
     - name: zmk-helpers
       remote: urob
       revision: main
+    - name: zmk-auto-layer
+      remote: urob
+      revision: v0.2 # set to same version as zmk
   self:
     path: config
