--- a/build.yaml
+++ b/build.yaml
@@ -28,5 +28,15 @@ include:
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: sofle_right
+  - board: nice_nano_v2 
+    shield: corne_left nice_view_adapter nice_view_custom
+    snippet: studio-rpc-usb-uart
+  - board: nice_nano_v2 
+    shield: corne_right nice_view_adapter nice_view_custom
+  - board: nice_nano_v2
+    shield: corne_left
+    snippet: studio-rpc-usb-uart
+  - board: nice_nano_v2
+    shield: corne_right
   - board: nice_nano_v2
     shield: settings_reset
