--- a/build.yaml
+++ b/build.yaml
@@ -28,15 +28,19 @@ include:
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: sofle_right
-  - board: nice_nano_v2 
-    shield: corne_left nice_view_adapter nice_view_custom
-    snippet: studio-rpc-usb-uart
-  - board: nice_nano_v2 
-    shield: corne_right nice_view_adapter nice_view_custom
-  - board: nice_nano_v2
-    shield: corne_left
-    snippet: studio-rpc-usb-uart
-  - board: nice_nano_v2
-    shield: corne_right
   - board: nice_nano_v2
     shield: settings_reset
+  - board: eyelash_corne_left
+    shield: nice_view
+    #snippet: zmk-usb-logging    # Uncomment to log over USB.
+  - board: eyelash_corne_right
+    shield: nice_view_custom
+    #snippet: zmk-usb-logging
+  - board: eyelash_corne_left
+    shield: nice_view_custom
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
+    artifact-name: eyelash_corne_studio_left
+  - board: eyelash_corne_left
+    shield: settings_reset
+    #snippet: zmk-usb-logging
