--- a/config/west.yml
+++ b/config/west.yml
@@ -10,6 +10,10 @@ manifest:
     - name: urob
       url-base: https://github.com/urob
   projects:
+    - name: zmk
+      remote: zmkfirmware
+      revision: main
+      import: app/west.yml
     - name: eyelash_corne
       url: https://github.com/a741725193/zmk-new_corne
       revision: main
