--- a/build.yaml
+++ b/build.yaml
@@ -31,7 +31,7 @@ include:
   - board: nice_nano_v2
     shield: settings_reset
   - board: eyelash_corne_left
-    shield: nice_view
+    shield: nice_view_custom
     #snippet: zmk-usb-logging    # Uncomment to log over USB.
   - board: eyelash_corne_right
     shield: nice_view_custom
