--- a/config/west.yml
+++ b/config/west.yml
@@ -20,5 +20,20 @@ manifest:
     - name: zmk-helpers
       remote: urob
       revision: main
+    - name: zmk-adaptive-key
+      remote: urob
+      revision: main
+    - name: zmk-auto-layer
+      remote: urob
+      revision: main
+    - name: zmk-helpers
+      remote: urob
+      revision: main
+    - name: zmk-leader-key
+      remote: urob
+      revision: main
+    - name: zmk-tri-state
+      remote: urob
+      revision: main
   self:
     path: config
