--- a/config/west.yml
+++ b/config/west.yml
@@ -3,10 +3,8 @@ manifest:
       # zmk official
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: gpeye                         
-      url-base: https://github.com/GPeye 
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: dsifry
+      url-base: https://github.com/dsifry
     - name: urob
       url-base: https://github.com/urob
   projects:
@@ -14,9 +12,9 @@ manifest:
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: urchin-peripheral-animation
-      remote: gpeye                      
-      revision: main                     
+    - name: nice-view-mod
+      remote: dsifry 
+      revision: main             
     - name: zmk-helpers
       remote: urob
       revision: main
