--- a/config/eyelash_corne.conf
+++ b/config/eyelash_corne.conf
@@ -8,14 +8,11 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 CONFIG_ZMK_SLEEP=y
 
-
-
-
-
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 
+CONFIG_WPM_GRAPH_ENABLED=n
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
@@ -37,5 +34,4 @@ CONFIG_ZMK_POINTING=y
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_BRT_START=100
 CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
-# Uncomment the following line to increase the keyboard's wireless range
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
